--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
-
     <application
             android:name=".App"
             android:allowBackup="true"
@@ -14,13 +13,18 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".features.cats.presentation.activity.CatsActivity">
+        <activity
+                android:name=".features.cats.presentation.activity.CatsActivity"
+                android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+                android:name=".features.favorites.presentation.activity.FavoritesActivity"
+                android:screenOrientation="portrait"/>
 
         <provider
                 android:name="android.support.v4.content.FileProvider"
