--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,11 @@
 ext {
-    var = '0.10.2'
+    rxjava_version = "2.1.0"
+    retrofit_version = "2.4.0"
+    room_version = "1.1.1"
+    dagger_version = "2.19"
+    moxy_version = "1.5.5"
+    glide_version = "4.8.0"
+    support_version = "28.0.0"
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
@@ -10,7 +16,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0-alpha05'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
