--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,14 +71,14 @@ dependencies {
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
+    // Architecture components
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    annotationProcessor 'android.arch.lifecycle:compiler:1.1.1'
+
     //room
     implementation "android.arch.persistence.room:runtime:$room_version"
     kapt "android.arch.persistence.room:compiler:$room_version"
     implementation "android.arch.persistence.room:rxjava2:$room_version"
-
-    //moxy
-    implementation "com.arello-mobile:moxy-app-compat:$moxy_version"
-    kapt "com.arello-mobile:moxy-compiler:$moxy_version"
 
     //glid
     implementation "com.github.bumptech.glide:glide:$glide_version"
